--- a/POO/Projet/BioBook/nbproject/project.properties
+++ b/POO/Projet/BioBook/nbproject/project.properties
@@ -25,9 +25,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/BioBook.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Program Files\\NetBeans 7.2.1\\ide\\modules\\ext\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
