--- a/POO/Projet/BioBook/nbproject/project.properties
+++ b/POO/Projet/BioBook/nbproject/project.properties
@@ -25,11 +25,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/BioBook.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jaf-1_1_1.zip=C:\\Users\\Maxime\\Desktop\\jaf-1_1_1.zip
+file.reference.javax.mail.jar=C:\\Users\\Maxime\\Desktop\\javax.mail.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Program Files\\NetBeans 7.2.1\\ide\\modules\\ext\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jaf-1_1_1.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
