--- a/POO/Projet/BioBook/nbproject/project.properties
+++ b/POO/Projet/BioBook/nbproject/project.properties
@@ -46,7 +46,6 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.jaf-1_1_1.zip-1}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.seaglasslookandfeel-0.2.jar}:\
@@ -55,7 +54,8 @@ javac.classpath=\
     ${file.reference.bizlaf-2.3.14.jar.zip}:\
     ${file.reference.NetBeans_7.2.1-de}:\
     ${file.reference.javax.mail.jar-1}:\
-    ${file.reference.seaglasslookandfeel-0.2.jar-1}
+    ${file.reference.seaglasslookandfeel-0.2.jar-1}:\
+    ${libs.MySQLDriver.classpath}
     ${file.reference.jaf-1_1_1.zip}:\
     ${file.reference.jaf-1_1_1.zip-1}:\
     ${file.reference.javax.mail.jar-1}
